Fix display issues on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,6 @@
 h2.animebytes.stats {
   display: grid;
   grid-template-columns: 1fr 0.5fr 0.5fr 0.5fr;
-  grid-column-gap: 40px;
+  grid-column-gap: 1rem;
   text-align: center;
 }
